--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>WebStudio</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <nav class="header-nav">
         <a href="./index.html" class="logo link"
           >Web<span class="logo-dark">Studio</span></a
@@ -64,7 +71,7 @@
         </button>
       </section>
       <section class="benefits-section">
-        <h2 class="benefits-title h-two-text">Benefits</h2>
+        <h2 class="visually-hidden benefits-title h-two-text">Benefits</h2>
         <ul class="benefits-list list">
           <li>
             <h3 class="benefits-list-title h-three-text">Strategy</h3>
@@ -179,13 +186,15 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="logo-light">Studio</span></a
-      >
-      <p class="footer-text body-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-light">Studio</span></a
+        >
+        <p class="footer-text body-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
