--- a/portfolio.html
+++ b/portfolio.html
@@ -5,56 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/style.css" />
     <title>WebStudio</title>
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-dark">Studio</span></a
-        >
-        <ul class="header-nav-list list">
-          <li class="nav-list-item">
-            <a href="./index.html" class="nav-list-content link body-text">
-              Studio</a
-            >
-          </li>
-          <li class="nav-list-item">
-            <a href="./portfolio.html" class="nav-list-content link body-text"
-              >Portfolio</a
-            >
-          </li>
-          <li class="nav-list-item">
-            <a href="" class="nav-list-content link body-text">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-dark">Studio</span></a
+          >
+          <ul class="header-nav-list list">
+            <li class="nav-list-item">
+              <a href="./index.html" class="nav-list-content link body-text">
+                Studio</a
+              >
+            </li>
+            <li class="nav-list-item">
+              <a href="./portfolio.html" class="nav-list-content link body-text"
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav-list-item">
+              <a href="" class="nav-list-content link body-text">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="header-address">
-        <ul class="header-address-list list">
-          <li class="address-list-item">
-            <a
-              href="mailto:info@devstudio.com"
-              class="address-list-content link body-text"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-list-item">
-            <a
-              href="tel:+110001111111"
-              class="address-list-content link body-text"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="header-address">
+          <ul class="header-address-list list">
+            <li class="address-list-item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="address-list-content link body-text"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-list-item">
+              <a
+                href="tel:+110001111111"
+                class="address-list-content link body-text"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="all-products-section">
