full index html

--- a/index.html
+++ b/index.html
@@ -166,8 +166,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title h-three-text">Mark Guerrero</h3>
-              <p class="team-list-text body-text">Product Designer</p>
+              <div class="title-text-container">
+                <h3 class="team-list-title h-three-text">Mark Guerrero</h3>
+                <p class="team-list-text body-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -177,8 +179,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title h-three-text">Tom Ford</h3>
-              <p class="team-list-text body-text">Frontend Developer</p>
+              <div class="title-text-container">
+                <h3 class="team-list-title h-three-text">Tom Ford</h3>
+                <p class="team-list-text body-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -188,8 +192,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title h-three-text">Camila Garcia</h3>
-              <p class="team-list-text body-text">Marketing</p>
+              <div class="title-text-container">
+                <h3 class="team-list-title h-three-text">Camila Garcia</h3>
+                <p class="team-list-text body-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -199,8 +205,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title h-three-text">Daniel Wilson</h3>
-              <p class="team-list-text body-text">UI Designer</p>
+              <div>
+                <h3 class="team-list-title h-three-text">Daniel Wilson</h3>
+                <p class="team-list-text body-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -209,7 +217,7 @@
     <footer class="footer">
       <!-- -------------------------------footer-section------------------------------- -->
 
-      <div class="container">
+      <div class="container footer-container">
         <a href="./index.html" class="logo link"
           >Web<span class="logo-light">Studio</span></a
         >
