--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,8 @@
   </head>
   <body>
     <header class="header">
+      <!-- -------------------------------header-section------------------------------- -->
+
       <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo link"
@@ -65,170 +67,203 @@
     </header>
     <main>
       <section class="all-products-section">
-        <h1 class="all-products-title">Products</h1>
-        <ul class="all-products-nav list">
-          <li class="product-nav-item">
-            <button type="button" class="product-nav-button button-text">
-              All
-            </button>
-          </li>
-          <li class="product-nav-item">
-            <button type="button" class="product-nav-button button-text">
-              Web Site
-            </button>
-          </li>
-          <li class="product-nav-item">
-            <button type="button" class="product-nav-button button-text">
-              App
-            </button>
-          </li>
-          <li class="product-nav-item">
-            <button type="button" class="product-nav-button button-text">
-              Design
-            </button>
-          </li>
-          <li class="product-nav-item">
-            <button type="button" class="product-nav-button button-text">
-              Marketing
-            </button>
-          </li>
-        </ul>
+        <div class="container">
+          <!-- -------------------------------nav-section------------------------------- -->
 
-        <ul class="example-product-list list">
-          <li class="product-list-item">
-            <a href="" class="product-list-link link">
-              <img
-                class="product-list-img"
-                src="./images/project-card/project-card-1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="product-list-title h-three-text">
-                Banking App Interface Concept
-              </h2>
-              <p class="product-list-text body-text">App</p>
-            </a>
-          </li>
-          <li class="product-list-item">
-            <a href="" class="product-list-link link">
-              <img
-                class="product-list-img"
-                src="./images/project-card/project-card-2.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="product-list-title h-three-text">Cashless Payment</h2>
-              <p class="product-list-text body-text">Marketing</p>
-            </a>
-          </li>
-          <li class="product-list-item">
-            <a href="" class="product-list-link link">
-              <img
-                class="product-list-img"
-                src="./images/project-card/project-card-3.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="product-list-title h-three-text">Meditation App</h2>
-              <p class="product-list-text body-text">App</p>
-            </a>
-          </li>
-          <li class="product-list-item">
-            <a href="" class="product-list-link link">
-              <img
-                class="product-list-img"
-                src="./images/project-card/project-card-4.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="product-list-title h-three-text">Taxi Service</h2>
-              <p class="product-list-text body-text">Marketing</p>
-            </a>
-          </li>
-          <li class="product-list-item">
-            <a href="" class="product-list-link link">
-              <img
-                class="product-list-img"
-                src="./images/project-card/project-card-5.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="product-list-title h-three-text">
-                Screen Illustrations
-              </h2>
-              <p class="product-list-text body-text">Design</p>
-            </a>
-          </li>
-          <li class="product-list-item">
-            <a href="" class="product-list-link link">
-              <img
-                class="product-list-img"
-                src="./images/project-card/project-card-6.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="product-list-title h-three-text">Online Courses</h2>
-              <p class="product-list-text body-text">Marketing</p>
-            </a>
-          </li>
-          <li class="product-list-item">
-            <a href="" class="product-list-link link">
-              <img
-                class="product-list-img"
-                src="./images/project-card/project-card-7.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="product-list-title h-three-text">
-                Instagram Stories Concept
-              </h2>
-              <p class="product-list-text body-text">Design</p>
-            </a>
-          </li>
-          <li class="product-list-item">
-            <a href="" class="product-list-link link">
-              <img
-                class="product-list-img"
-                src="./images/project-card/project-card-8.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="product-list-title h-three-text">Organic Food</h2>
-              <p class="product-list-text body-text">Web Site</p>
-            </a>
-          </li>
-          <li class="product-list-item">
-            <a href="" class="product-list-link link">
-              <img
-                class="product-list-img"
-                src="./images/project-card/project-card-9.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="product-list-title h-three-text">Fresh Coffee</h2>
-              <p class="product-list-text body-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+          <h1 class="all-products-title visually-hidden">Products</h1>
+          <ul class="all-products-nav list">
+            <li class="product-nav-item">
+              <button type="button" class="product-nav-button button-text">
+                All
+              </button>
+            </li>
+            <li class="product-nav-item">
+              <button type="button" class="product-nav-button button-text">
+                Web Site
+              </button>
+            </li>
+            <li class="product-nav-item">
+              <button type="button" class="product-nav-button button-text">
+                App
+              </button>
+            </li>
+            <li class="product-nav-item">
+              <button type="button" class="product-nav-button button-text">
+                Design
+              </button>
+            </li>
+            <li class="product-nav-item">
+              <button type="button" class="product-nav-button button-text">
+                Marketing
+              </button>
+            </li>
+          </ul>
+          <!-- -------------------------------example-section------------------------------- -->
+
+          <ul class="example-product-list list">
+            <li class="product-list-item">
+              <a href="" class="product-list-link link">
+                <img
+                  class="product-list-img"
+                  src="./images/project-card/project-card-1.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="title-text-container-portfolio">
+                  <h2 class="product-list-title h-three-text">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="product-list-text body-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="product-list-item">
+              <a href="" class="product-list-link link">
+                <img
+                  class="product-list-img"
+                  src="./images/project-card/project-card-2.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="title-text-container-portfolio">
+                  <h2 class="product-list-title h-three-text">
+                    Cashless Payment
+                  </h2>
+                  <p class="product-list-text body-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="product-list-item">
+              <a href="" class="product-list-link link">
+                <img
+                  class="product-list-img"
+                  src="./images/project-card/project-card-3.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="title-text-container-portfolio">
+                  <h2 class="product-list-title h-three-text">
+                    Meditation App
+                  </h2>
+                  <p class="product-list-text body-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="product-list-item">
+              <a href="" class="product-list-link link">
+                <img
+                  class="product-list-img"
+                  src="./images/project-card/project-card-4.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="title-text-container-portfolio">
+                  <h2 class="product-list-title h-three-text">Taxi Service</h2>
+                  <p class="product-list-text body-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="product-list-item">
+              <a href="" class="product-list-link link">
+                <img
+                  class="product-list-img"
+                  src="./images/project-card/project-card-5.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="title-text-container-portfolio">
+                  <h2 class="product-list-title h-three-text">
+                    Screen Illustrations
+                  </h2>
+                  <p class="product-list-text body-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="product-list-item">
+              <a href="" class="product-list-link link">
+                <img
+                  class="product-list-img"
+                  src="./images/project-card/project-card-6.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="title-text-container-portfolio">
+                  <h2 class="product-list-title h-three-text">
+                    Online Courses
+                  </h2>
+                  <p class="product-list-text body-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="product-list-item">
+              <a href="" class="product-list-link link">
+                <img
+                  class="product-list-img"
+                  src="./images/project-card/project-card-7.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="title-text-container-portfolio">
+                  <h2 class="product-list-title h-three-text">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="product-list-text body-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="product-list-item">
+              <a href="" class="product-list-link link">
+                <img
+                  class="product-list-img"
+                  src="./images/project-card/project-card-8.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="title-text-container-portfolio">
+                  <h2 class="product-list-title h-three-text">Organic Food</h2>
+                  <p class="product-list-text body-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="product-list-item">
+              <a href="" class="product-list-link link">
+                <img
+                  class="product-list-img"
+                  src="./images/project-card/project-card-9.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="title-text-container-portfolio">
+                  <h2 class="product-list-title h-three-text">Fresh Coffee</h2>
+                  <p class="product-list-text body-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="logo-light">Studio</span></a
-      >
-      <p class="footer-text body-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <!-- -------------------------------footer-section------------------------------- -->
+
+      <div class="container footer-container">
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-light">Studio</span></a
+        >
+        <p class="footer-text body-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
