--- a/index.html
+++ b/index.html
@@ -85,28 +85,28 @@
         <div class="container">
           <h2 class="visually-hidden benefits-title h-two-text">Benefits</h2>
           <ul class="benefits-list list">
-            <li>
+            <li class="benefits-list-item">
               <h3 class="benefits-list-title h-three-text">Strategy</h3>
               <p class="benefits-list-text body-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="benefits-list-item">
               <h3 class="benefits-list-title h-three-text">Punctuality</h3>
               <p class="benefits-list-text body-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="benefits-list-item">
               <h3 class="benefits-list-title h-three-text">Diligence</h3>
               <p class="benefits-list-text body-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="benefits-list-item">
               <h3 class="benefits-list-title h-three-text">Technologies</h3>
               <p class="benefits-list-text body-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -154,7 +154,7 @@
       </section>
       <!-- -------------------------------team-section------------------------------- -->
 
-      <section class="team-secrion">
+      <section class="team-section">
         <div class="container">
           <h2 class="team-title h-two-text">Our Team</h2>
           <ul class="team-list list">
@@ -205,7 +205,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="title-text-container">
                 <h3 class="team-list-title h-three-text">Daniel Wilson</h3>
                 <p class="team-list-text body-text">UI Designer</p>
               </div>
