update  css and index

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
       <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo link"
-            >Web<span class="logo-dark">Studio</span></a
-          >
+            >Web<span class="logo-dark">Studio</span>
+          </a>
           <ul class="header-nav-list list">
             <li class="nav-list-item">
               <a href="./index.html" class="nav-list-content link body-text">
-                Studio</a
-              >
+                Studio
+              </a>
             </li>
             <li class="nav-list-item">
               <a href="./portfolio.html" class="nav-list-content link body-text"
-                >Portfolio</a
-              >
+                >Portfolio
+              </a>
             </li>
             <li class="nav-list-item">
               <a href="" class="nav-list-content link body-text">Contacts</a>
